<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.1.0</version>
    <relativePath/>
  </parent>

  <groupId>com.ubs.lending</groupId>
  <artifactId>pe-sub-api</artifactId>
  <version>1.0.0</version>
  <name>pe-sub-api</name>

  <properties>
    <java.version>25</java.version>
  </properties>

  <dependencies>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
    </dependency>
    <!-- Boot 4.x modularized auto-configuration: Flyway migrations only run when this
         starter is present; a bare flyway-core dependency is no longer auto-configured. -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-flyway</artifactId>
    </dependency>
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-database-postgresql</artifactId>
    </dependency>
    <!-- Spring Cache + Caffeine — TTL-based in-process cache for low-churn lookup data -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-cache</artifactId>
    </dependency>
    <dependency>
      <groupId>com.github.ben-manes.caffeine</groupId>
      <artifactId>caffeine</artifactId>
    </dependency>

    <!-- Apache POI — Excel (.xlsx) parsing for BB template import -->
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>5.5.1</version>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- Boot 4.x modularized test support: MockMvc auto-configuration
         (org.springframework.boot.webmvc.test.autoconfigure) lives here, not in starter-test. -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webmvc-test</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- Boot 4.x modularized test support: the MockMvc <-> Spring Security test integration
         (@WithMockUser visibility in MockMvc requests) lives here; it also pulls in
         spring-security-test transitively. -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security-test</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- Zonky embedded PostgreSQL: Docker-free, full Postgres (JSONB/casts) compatibility.
         Replaces the Testcontainers-based integration test infrastructure. -->
    <dependency>
      <groupId>io.zonky.test</groupId>
      <artifactId>embedded-database-spring-test</artifactId>
      <version>2.8.0</version>
      <scope>test</scope>
      <!-- This starter transitively drags in org.testcontainers:{postgresql,mssqlserver,
           mysql,mariadb} for its DOCKER provider. We only use the ZONKY provider (in-process
           embedded-postgres binary, no Docker), so exclude the entire org.testcontainers
           group to keep the dependency graph Docker-free. -->
      <exclusions>
        <exclusion>
          <groupId>org.testcontainers</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- The ZONKY provider; declared optional by the starter above, so required explicitly. -->
    <dependency>
      <groupId>io.zonky.test</groupId>
      <artifactId>embedded-postgres</artifactId>
      <version>2.2.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <!-- Pin the embedded Postgres binary to v16 to match the production database. -->
      <dependency>
        <groupId>io.zonky.test.postgres</groupId>
        <artifactId>embedded-postgres-binaries-bom</artifactId>
        <version>18.4.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>

      <!-- Resolve the mockito-core jar path into the ${org.mockito:mockito-core:jar} property so
           Surefire can load it as a -javaagent below. Versions are managed by
           spring-boot-starter-parent; the `properties` goal binds to the initialize phase, before
           tests run. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>properties</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Load Mockito as an explicit Java agent instead of letting it self-attach at runtime;
           self-attachment is deprecated and will stop working on future JDKs. -Xshare:off silences
           the CDS warning that the appended agent otherwise triggers. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-javaagent:${org.mockito:mockito-core:jar} -Xshare:off</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
